# bccc

./: README4login.md  cmp.cpp  compall.py  cpall.py  delchrome.reg  derivform-22.py  derivform-23.py  derivform-24.py  derivform-25.py  derivform-26.py  derivform-27.py  derivform-28.py  derivform-29.py  derivform-30.py  derivform-31.py  derivform-32.py  derivform-33.py  derivform-34.py  derivform-35.py  derivform-36.py  derivform-37.py  derivform-38.py  derivform-39.py  derivform-40.py  derivform-41.py  derivform-42.py  derivform-43.py  derivform-44.py  derivform-45.py  derivform-47.py  derivform-48.py  derivform.py  login.bat  login.py  login.sh  lsh01node  pymp.py  reboot.bat  solve.py  winsock.reg  (+1 more)
bccc/: CMakeLists.txt  H12_2_sto-6g_bccc3b.out  Makefile  __init__.py  __main__.py  addons.py  casbccc.py  gvbbccc-old.py  gvbbccc.py  gvbbcccdf.py  init.py  iter-old.py  iter.py  pub.cpp  pub.h  pub.py  rep-old.py  rep.py  tm-old.py  tm.py  ucasbccc.py  ugvbbccc.py  ugvbbcccdf.py
bccc/hm/: __init__.py  __main__.py  hm.cpp  hm.h
bccc/ta/: __init__.py  __main__.py  ta.cpp  ta.h  ta_.cpp  ta_A1B1.cpp  ta_A1B2.cpp  ta_A2B2.cpp  ta_A3B3.cpp  ta_A6B15.cpp  ta_A7B13.cpp  ta_A7B14.cpp  ta_A8B13.cpp  ta_A8B14.cpp
doc/: GVB-LCC.docx  GVB-LCC.tex  base.tex  hm.tex  rep.tex  sym.tex  t.tex  ta_.tex  ta_A1.tex  ta_A10B11.tex  ta_A10B12.tex  ta_A2.tex  ta_A3.tex  ta_A4B5.tex  ta_A6B15.tex  ta_A7B13.tex  ta_A7B14.tex  ta_A8B13.tex  ta_A8B14.tex  ta_A9B11.tex  ta_A9B12.tex  tm.tex  wave.tex
examples/: examples.xlsx
examples/BH3/: BH3-opt.gjf  BH3-z.gjf  (+8 more)
tests/: tests.xlsx
(+426 files in other folders)
